k8s/overlays/prod-like/patches/prodlike.labels-env.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-api
  namespace: opsdesk
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "prod-like"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-worker
  namespace: opsdesk
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "prod-like"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-frontend
  namespace: opsdesk
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "prod-like"
