k8s/overlays/prod-like/patches/replicas.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-api
  namespace: opsdesk
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-frontend
  namespace: opsdesk
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk-worker
  namespace: opsdesk
spec:
  replicas: 1
